@@ -1,3 +1,14 @@
+2008-03-25  Matt Lilek  <webkit@mattlilek.com>
+
+        Rubber stamped by Adam
+
+        Roll out r30300 since it causes assertion failures on page load.
+        See http://bugs.webkit.org/show_bug.cgi?id=18093
+
+        * page/InspectorController.cpp:
+        (WebCore::InspectorController::didFinishLoading):
+        (WebCore::InspectorController::didFailLoading):
+
 2008-03-25  Darin Adler  <darin@apple.com>
 
         Reviewed by Anders.
